# pythonium

./: .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yaml  output.prof  properties.toml  pyproject.toml
pythonium/: __main__.py
pythonium/engine/: __init__.py  classproperty.py  constants.py  exceptions.py  field.py  formatter.py  properties_reader.py  router.py  server.py  typealiases.py  types.py  world.py
pythonium/engine/client/: __init__.py  client.py  connection.py  session.py
pythonium/engine/codecs/: __init__.py  advancement.py  array.py  attributes.py  base.py  bitset.py  boss_bar_action.py  chat_codecs.py  chat_type.py  chunk.py  commands.py  custom.py  equipment.py  game_codecs.py  identifier.py  map_data.py  minecart.py  nbt.py  node.py  optional.py  particle.py  player_info.py  primitive.py  primitives.py  recipe.py  rest_buffer.py  scoreboard.py  slot.py  sound_event.py  statistics.py  tag.py  teams.py  trade.py  update_recipes.py  waypoint.py  world.py
pythonium/engine/entity/: base.py
pythonium/engine/enums/: __init__.py  action_id.py  advancements.py  block_action.py  difficulty.py  dimensions.py  direction.py  face_player.py  gamemode.py  gamestate.py  next_state.py  placement.py  sound_source.py  states.py  teleport_flags.py  use_entity.py
pythonium/engine/packets/: __init__.py  base.py  factory.py  handshake.py  packet_storage.py  status.py
pythonium/engine/router/: __init__.py  router.py  struct.py
pythonium/engine/server/: __init__.py  packet_reader.py  server.py
pythonium/engine/snapshots/: __init__.py  entity.py
pythonium/registries/: block_registry.py  protocol.json  protocol_storage.py  registries.json  registries.snbt  registries_storage.py
(+410 files in other folders)
